<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bgsplash"
    android:padding="30dp"
    tools:context=".LoginActivity">
    <EditText
        android:textColor="@color/black"
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:textColorHint="#fff"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:textColor="@color/black"
        android:layout_below="@id/editTextTextEmailAddress"
        android:id="@+id/editTextTextPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:textColorHint="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_below="@id/editTextTextPassword"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:background="#00ff0000"
        android:padding="15dp"
        android:layout_below="@id/loginButton"/>
</RelativeLayout>